# rhythmr

./: .gitignore  Installation.md  README.md  audiolabs-erlangen.py  autobeat.cabal  cln  dbg-run  demo  g  get-mp3s.py  give-me-a-stack-trace  hie.yaml  init.sh  mega-project.sh  musicinformationretrieval.py  process-ids  profile-run  rhythmr.cabal  rmtemps  sgloop  stack.yaml  static-link-demo.sh  sttr-ghci  y.cabal
distribution/: generate-distribution  generate-icns  reinstall-ls  run-rhythmr.sh
distribution/app-template/Rhythmr.app/Contents/: Info.plist  document.wflow
distribution/app-template/Rhythmr.app/Contents/MacOS/: Rhythmr
distribution/app-template/Rhythmr.app/Contents/Resources/: Rhythmr.icns
distribution/app-template/Rhythmr.app/Contents/Resources/Scripts/: main
doc/: About.md  AdvancedFeatures.md  Credits.md  Documentation.md  Installation.md  Troubleshooting.md
presentation/: g  presentation.md
src/: AesonHelpers.hs  Affinity.hs  Analysis.hs  Animate.hs  Arrangement.hs  Ascii.hs  Aubio.hs  BandLimitedInterpolator.hs  BandLimitedInterpoliator.hs  Bars.hs  Blossom.hs  Chew.hs  ClientServer.hs  Config.hs  Constants.hs  Diag.hs  Dice.hs  Display.hs  Download.hs  External.hs  FPS.hs  FX.hs  Feh.hs  Fiz.hs  Gfx.hs  Graph.hs  Gui.hs  Hash.hs  History.hs  Hypercube.hs  ISO8601Duration.hs  Loop.hs  Looper.hs  Main.hs  Memoize.hs  Mess.hs  Mix.hs  Numberer.hs  Project.hs  RPC.hs  (+26 more)
