name:                autobeat
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/loopo#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
--extra-source-files:  README.md

--Library pa
  --C-sources: src/nonblocking.c

executable autobeat
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Util, External, Aubio, Sound, Resample, Song, Search, Download, Memoize, Analysis, ISO8601Duration, AesonHelpers, Spleeter, Arrangement, Mess, Feh, Display, Affinity, Constants, Graph,
                       Looper
  default-language:    Haskell2010
  --extra-libraries:     nonblocking.o
  c-sources:           src/nonblocking.c
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       base16-bytestring,
                       bytestring,
                       containers,
                       cryptohash-md5,
                       directory,
                       filepath,
                       gloss,
                       hsndfile >= 0.8.0,
                       hsndfile-storablevector >= 0.5.2,
                       --conduit-audio-samplerate,
                       --portaudio >= 0.2.4,
                       --iso8601-duration,
                       MissingH,
                       --pa,
                       portaudio >= 0.2.4,
                       pretty-simple,
                       process,
                       random,
                       split,
                       storablevector,
                       temporary,
                       text,
                       time,
                       unordered-containers,
                       utf8-string,
                       vector
                       --vector,
                       --hsndfile,
                       --c2hs >= 0.16.3
                       --array,
                       --explicit-exception,
                       --jack,
                       --transformers
