name:                autobeat
version:             0.1.0.0
-- synopsis:
-- description:
--homepage:            https://github.com/githubuser/loopo#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
--extra-source-files:  README.md

--Library pa
  --C-sources: src/nonblocking.c

Flag llvm
  Description:  Compile via LLVM. This produces much better object code
                but your GHC needs to have been built against the LLVM compiler.

  Default:      False

executable autobeat
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Util, External, Aubio, Sound, Resample, Search, Download, Memoize, Analysis, ISO8601Duration, AesonHelpers, Spleeter, Arrangement, Mess, Feh, Affinity, Constants, Graph,
                       Looper, TUI, Zipper, FX, Score, Dice, Gui, FPS, State, Ascii, Bars, Viz
  --ghc-options:         -threaded -rtsopts "-with-rtsopts=-N"

  ghc-options:
        -O2
        -threaded
        -rtsopts

  --ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -sstderr"
  default-language:    Haskell2010
  --extra-libraries:     nonblocking.o
  c-sources:           src/nonblocking.c
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       ansi-terminal >= 0.9,
                       base16-bytestring,
                       bytestring,
                       containers,
                       cryptohash-md5,
                       directory,
                       filepath,
                       GLFW-b,
                       gloss,
--cabal install gloss --flags="GLFW -GLUT"
                       hsndfile >= 0.8.0,
                       hsndfile-storablevector >= 0.5.2,
                       --conduit-audio-samplerate,
                       --portaudio >= 0.2.4,
                       --iso8601-duration,
                       --MissingH,
                       --pa,
                       linear,
                       network >= 3.1.1.1,
                       portaudio >= 0.2.4,
                       pretty-simple,
                       process,
                       random,
                       split,
                       stm,
                       storablevector,
                       temporary,
                       text,
                       time,
                       unix,
                       unordered-containers,
                       utf8-string,
                       vector
                       --vector,
                       --hsndfile,
                       --c2hs >= 0.16.3
                       --array,
                       --explicit-exception,
                       --jack,
                       --transformers
